# visionlib_poc

./: .gitignore  CMakeLists.txt  README.md  welib3d-config.cmake
cmake/: welib3dConfig.cmake  welib3dTargets-debug.cmake  welib3dTargets-release.cmake  welib3dTargets.cmake
include/: algs.h  create_mesh.h  hole_filling.h  io.h  io_e57.h  io_ply.h  io_txt.h  magic_filter.h  magic_sor.h  mesh.h  normals_estimation.h  point.h  pointcloud.h  public_header.h  roi.h  sensor3d_connector.h  sor.h  we_assert.h  welib3d.h  welib3d_config.h  welib3d_export.h
test_app/: CMakeLists.txt  main.cpp
